feat: added poppins font

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@ Common Rules
 
 body {
     background-color: #F6F9FA;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 header {
